@startuml

title __VERIFIER-COMMON's Class Diagram__\n

  namespace pt.ulisboa.tecnico.surespace.verifier.message {
    class pt.ulisboa.tecnico.surespace.verifier.message.SignedVerifyProofRequest {
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.verifier.message {
    class pt.ulisboa.tecnico.surespace.verifier.message.SignedVerifyProofResponse {
    }
  }
  

  pt.ulisboa.tecnico.surespace.verifier.message.SignedVerifyProofRequest -up-|> pt.ulisboa.tecnico.surespace.common.message.SignedMessage
  pt.ulisboa.tecnico.surespace.verifier.message.SignedVerifyProofResponse -up-|> pt.ulisboa.tecnico.surespace.common.message.SignedMessage


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
